resources/src/mediawiki.ui/components/checkbox.less
@import "mediawiki.mixins";
@import "mediawiki.ui/variables";

// Checkbox
//
// Styling checkboxes in a way that works cross browser is a tricky problem to solve.
// In MediaWiki UI put a checkbox and label inside a mw-ui-checkbox div.
// This renders in all browsers except IE6-8 which do not support the :checked selector;
// these are kept backwards-compatible using the :not(#noop) selector.
// You should give the checkbox and label matching "id" and "for" attributes, respectively.
//
// Markup:
// <div class="mw-ui-checkbox">
//   <input type="checkbox" id="kss-example-3">
//   <label for="kss-example-3">Standard checkbox</label>
// </div>
// <div class="mw-ui-checkbox">
//   <input type="checkbox" id="kss-example-3-checked" checked>
//   <label for="kss-example-3-checked">Standard checked checkbox</label>
// </div>
// <div class="mw-ui-checkbox">
//   <input type="checkbox" id="kss-example-3-disabled" disabled>
//   <label for="kss-example-3-disabled">Disabled checkbox</label>
// </div>
// <div class="mw-ui-checkbox">
//   <input type="checkbox" id="kss-example-3-disabled-checked" disabled checked>
//   <label for="kss-example-3-disabled-checked">Disabled checked checkbox</label>
// </div>
//
// Styleguide 3.
.mw-ui-checkbox {
	display: inline-block;
	vertical-align: middle;
}

@checkboxSize: 2em;

// We use the not selector to cancel out styling on IE 8 and below
.mw-ui-checkbox:not(#noop) {
	// Position relatively so we can make use of absolute pseudo elements
	position: relative;
	line-height: @checkboxSize;

	* {
		// reset font sizes (see bug 72727)
		font: inherit;
		vertical-align: middle;
	}

	input[type="checkbox"] {
		// we hide the input element as instead we will style the label that follows
		// we use opacity so that VoiceOver software can still identify it
		opacity: 0;
		// ensure the invisible checkbox takes up the required width
		width: @checkboxSize;
		height: @checkboxSize;
		// This is needed for Firefox mobile (See bug 71750 to workaround default Firefox stylesheet)
		max-width: none;
		margin-right: 0.4em;

		// the pseudo before element of the label after the checkbox now looks like a checkbox
		& + label::before {
			content: '';
			cursor: pointer;
			.box-sizing(border-box);
			position: absolute;
			left: 0;
			border-radius: @borderRadius;
			width: @checkboxSize;
			height: @checkboxSize;
			background-color: #fff;
			border: 1px solid @colorGray7;
		}

		// when the input is checked, style the label pseudo before element that followed as a checked checkbox
		&:checked + label::before {
			.background-image-svg('images/checked.svg', 'images/checked.png');
			.background-size( @checkboxSize - 0.2em, @checkboxSize - 0.2em );
			background-repeat: no-repeat;
			background-position: center center;
			background-origin: border-box;
		}

		&:active + label::before {
			background-color: @colorGray13;
			border-color: @colorGray13;
		}

		&:focus + label::before {
			border-width: 2px;
		}

		&:focus:hover + label::before,
		&:hover + label::before {
			border-bottom-width: 3px;
		}

		// disabled checkboxes have a gray background
		&:disabled + label::before {
			cursor: default;
			background-color: @colorGray14;
			border-color: @colorGray14;
		}

		// disabled and checked checkboxes have a white circle
		&:disabled:checked + label::before {
			.background-image-svg('images/checked_disabled.svg', 'images/checked_disabled.png');
		}
	}
}

